# Struct-HTML-Paralels

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  configure_cppcheck.cmake  configure_test.cmake  install_gtest.cmake  main.c
Gtests/: CMakeLists.txt  test_algo.cpp  test_html.cpp
hw1/: .travis.yml  README.md
hw1/src/: html.c  main.c  test_html.cpp
hw2/: configure_test.cmake
hw2/Gtests/: CMakeLists.txt
hw2/src/parallel/: parallel.c  parallel.h
hw2/src/trivial/: trivial.c
src/: html.h  main.c  main.h  test_main.cpp
src/parallel/: parallel.c  parallel.h
src/trivial/: trivial.c  trivial.h
